Updated README.md to  add changes to the vaibale Also added additonal swagger annotations
